--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/EventEmitter"]
 	path = deps/EventEmitter
 	url = git://github.com/ericz/EventEmitter.git
+[submodule "deps/EventEmitter2"]
+	path = deps/EventEmitter2
+	url = git://github.com/asyncly/EventEmitter2.git
